import es.ull.patrones.app.App;

public class Main {
    public static void main(String[] args) {
        App app = new App();
    }
}