@startuml

title __P3-METHODTEMPLATE's Class Diagram__\n

  namespace es.ull.patrones {
    class Main {
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.algorithm {
      abstract class es.ull.patrones.algorithm.DivideConqTemplate {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.algorithm {
      class es.ull.patrones.algorithm.MergeSort {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.algorithm {
      class es.ull.patrones.algorithm.QuickSort {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.app {
      class es.ull.patrones.app.App {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.template {
      class es.ull.patrones.template.Problem {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.template {
      interface es.ull.patrones.template.ProblemInterface {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.template {
      class es.ull.patrones.template.Solution {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.template {
      interface es.ull.patrones.template.SolutionInterface {
      }
    }
  }
  

  es.ull.patrones.algorithm.MergeSort -up-|> es.ull.patrones.algorithm.DivideConqTemplate
  es.ull.patrones.algorithm.QuickSort -up-|> es.ull.patrones.algorithm.DivideConqTemplate
  es.ull.patrones.template.Problem .up.|> es.ull.patrones.template.ProblemInterface
  es.ull.patrones.template.Solution .up.|> es.ull.patrones.template.SolutionInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
